Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98737

Dependency update to qt/qtsensors failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 6.2.3, 6.3.0 Alpha
    • 6.2.3, 6.3.0 Feature Freeze
    • Sensors
    • None
    • f5d9ffcba008668c90d839f79dbaf9518d5f5755 (qt/qtsensors/dev) 5c4d5167fc7950eb47686c3414764ff65c7c8681 (qt/qtsensors/6.2)

      agent:2021/11/26 21:27:11 build.go:394: In file included from /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor.cpp:40:
      agent:2021/11/26 21:27:11 build.go:394: In file included from /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor_p.h:54:
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:198:42: error: unknown type name 'm_reading'
      agent:2021/11/26 21:27:11 build.go:394:                                          m_reading, nullptr)
      agent:2021/11/26 21:27:11 build.go:394:                                          ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:198:53: error: expected parameter declarator
      agent:2021/11/26 21:27:11 build.go:394:                                          m_reading, nullptr)
      agent:2021/11/26 21:27:11 build.go:394:                                                     ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:198:53: error: expected ')'
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:197:41: note: to match this '('
      agent:2021/11/26 21:27:11 build.go:394:     Q_OBJECT_BINDABLE_PROPERTY_WITH_ARGS(QmlSensor, QmlSensorReading*,
      agent:2021/11/26 21:27:11 build.go:394:                                         ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:197:5: error: C++ requires a type specifier for all declarations
      agent:2021/11/26 21:27:11 build.go:394:     Q_OBJECT_BINDABLE_PROPERTY_WITH_ARGS(QmlSensor, QmlSensorReading*,
      agent:2021/11/26 21:27:11 build.go:394:     ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:198:61: error: expected ';' at end of declaration list
      agent:2021/11/26 21:27:11 build.go:394:                                          m_reading, nullptr)
      agent:2021/11/26 21:27:11 build.go:394:                                                             ^
      agent:2021/11/26 21:27:11 build.go:394:                                                             ;
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:224:32: error: unknown type name 'm_timestamp'
      agent:2021/11/26 21:27:11 build.go:394:                                m_timestamp, &QmlSensorReading::timestampChanged)
      agent:2021/11/26 21:27:11 build.go:394:                                ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:224:64: error: parameter declarator cannot be qualified
      agent:2021/11/26 21:27:11 build.go:394:                                m_timestamp, &QmlSensorReading::timestampChanged)
      agent:2021/11/26 21:27:11 build.go:394:                                              ~~~~~~~~~~~~~~~~~~^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:224:64: error: C++ requires a type specifier for all declarations
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:223:5: error: C++ requires a type specifier for all declarations
      agent:2021/11/26 21:27:11 build.go:394:     Q_OBJECT_BINDABLE_PROPERTY(QmlSensorReading, quint64,
      agent:2021/11/26 21:27:11 build.go:394:     ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlsensor_p.h:224:81: error: expected ';' at end of declaration list
      agent:2021/11/26 21:27:11 build.go:394:                                m_timestamp, &QmlSensorReading::timestampChanged)
      agent:2021/11/26 21:27:11 build.go:394:                                                                                 ^
      agent:2021/11/26 21:27:11 build.go:394:                                                                                 ;
      agent:2021/11/26 21:27:11 build.go:394: In file included from /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor.cpp:40:
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor_p.h:99:32: error: unknown type name 'm_reflectance'
      agent:2021/11/26 21:27:11 build.go:394:                                m_reflectance, &QmlIRProximitySensorReading::reflectanceChanged)
      agent:2021/11/26 21:27:11 build.go:394:                                ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor_p.h:99:77: error: parameter declarator cannot be qualified
      agent:2021/11/26 21:27:11 build.go:394:                                m_reflectance, &QmlIRProximitySensorReading::reflectanceChanged)
      agent:2021/11/26 21:27:11 build.go:394:                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor_p.h:99:77: error: C++ requires a type specifier for all declarations
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor_p.h:98:5: error: C++ requires a type specifier for all declarations
      agent:2021/11/26 21:27:11 build.go:394:     Q_OBJECT_BINDABLE_PROPERTY(QmlIRProximitySensorReading, qreal,
      agent:2021/11/26 21:27:11 build.go:394:     ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor_p.h:99:96: error: expected ';' at end of declaration list
      agent:2021/11/26 21:27:11 build.go:394:                                m_reflectance, &QmlIRProximitySensorReading::reflectanceChanged)
      agent:2021/11/26 21:27:11 build.go:394:                                                                                                ^
      agent:2021/11/26 21:27:11 build.go:394:                                                                                                ;
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor.cpp:115:12: error: use of undeclared identifier 'm_reflectance'; did you mean 'reflectance'?
      agent:2021/11/26 21:27:11 build.go:394:     return m_reflectance;
      agent:2021/11/26 21:27:11 build.go:394:            ^~~~~~~~~~~~~
      agent:2021/11/26 21:27:11 build.go:394:            reflectance
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor.cpp:113:36: note: 'reflectance' declared here
      agent:2021/11/26 21:27:11 build.go:394: qreal QmlIRProximitySensorReading::reflectance() const
      agent:2021/11/26 21:27:11 build.go:394:                                    ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor.cpp:115:12: error: reference to non-static member function must be called; did you mean to call it with no arguments?
      agent:2021/11/26 21:27:11 build.go:394:     return m_reflectance;
      agent:2021/11/26 21:27:11 build.go:394:            ^~~~~~~~~~~~~
      agent:2021/11/26 21:27:11 build.go:394:                         ()
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor.cpp:118:47: error: implicit instantiation of undefined template 'TestNamespace::QBindable<double>'
      agent:2021/11/26 21:27:11 build.go:394: QBindable<qreal> QmlIRProximitySensorReading::bindableReflectance() const
      agent:2021/11/26 21:27:11 build.go:394:                                               ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/install/include/QtCore/qobject.h:66:29: note: template is declared here
      agent:2021/11/26 21:27:11 build.go:394: template <typename T> class QBindable;
      agent:2021/11/26 21:27:11 build.go:394:                             ^
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/src/sensorsquick/qmlirproximitysensor.cpp:120:13: error: use of undeclared identifier 'm_reflectance'; did you mean 'QIRProximityReading::reflectance'?
      agent:2021/11/26 21:27:11 build.go:394:     return &m_reflectance;
      agent:2021/11/26 21:27:11 build.go:394:             ^~~~~~~~~~~~~
      agent:2021/11/26 21:27:11 build.go:394:             QIRProximityReading::reflectance
      agent:2021/11/26 21:27:11 build.go:394: /Users/qt/work/qt/qtsensors/include/QtSensors/../../src/sensors/qirproximitysensor.h:55:11: note: 'QIRProximityReading::reflectance' declared here
      agent:2021/11/26 21:27:11 build.go:394:     qreal reflectance() const;
      agent:2021/11/26 21:27:11 build.go:394:           ^
      agent:2021/11/26 21:27:11 build.go:394: fatal error: too many errors emitted, stopping now [-ferror-limit=]
      agent:2021/11/26 21:27:11 build.go:394: 20 errors generated.
      agent:2021/11/26 21:27:11 build.go:394: ninja: build stopped: subcommand failed.
      

      Build log: https://testresults.qt.io/logs/qt/qtsensors/42746ac213023afe743787a87a36501ecd54f66a/MacOSMacOS_12x86_64MacOSMacOS_12x86_64Clangqtci-macos-12-x86_64-102-fb4d64Sccache_WarningsAreErrors/94c62f4420f123c7ada228d2b6247f15bc4c39c4/build_1637972443/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtsensors/tasks/1637972419

      Tested changes (refs/builds/qtci/dev/1637956675):
      https://codereview.qt-project.org/c/qt/qtsensors/+/383373/2 Update dependencies on 'dev' in qt/qtsensors

        For Gerrit Dashboard: QTBUG-98737
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes