QmlSensor: add missing #include <QProperty>

It's not longer transitively included by qobject.h

Fixes: QTBUG-98737
Change-Id: Ib6eb90926b0c504de20b279d15c06b5adda7e1d5
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit f5d9ffcba008668c90d839f79dbaf9518d5f5755)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>